--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <input id="oiii" type="radio" name="survey" value="https://www.simg.de/nebulae3/dr0_2/oiii"><label for="oiii">Oiii 16</label>
 <input id="rgb8" type="radio" name="survey" value="https://www.simg.de/nebulae3/dr0_2/rgb8"><label for="rgb8">RGB 8</label>
 <input id="hbr8" type="radio" name="survey" value="https://www.simg.de/nebulae3/dr0_2/hbr8"><label for="hbr8">HBR 8</label>
+<input id="hbr8" type="radio" name="survey" value="https://www.simg.de/nebulae3/dr0_2/ohs8"><label for="hbr8">OHS 8</label>
 <input id="tc8" type="radio" name="survey" value="https://www.simg.de/nebulae3/dr0_1/tc8"><label for="tc8">TC 8</label>
 <input id="DSS" type="radio" name="survey" value="P/DSS2/color"><label for="DSS">DSS color</label>
 <input id="Mellinger" type="radio" name="survey" value="http://alasky.u-strasbg.fr/MellingerRGB"><label for="Mellinger">Mellinger</label>
